Implemented Jim's corrections.

--- a/shortintro.tex
+++ b/shortintro.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % shortintro.tex - Ian Huston
-% $Id: shortintro.tex,v 1.7 2009/10/19 11:33:25 ith Exp $
+% $Id: shortintro.tex,v 1.8 2009/11/16 16:58:58 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: shortintro.tex,v 1.7 2009/10/19 11:33:25 ith Exp $}
+{\version$Id: shortintro.tex,v 1.8 2009/11/16 16:58:58 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -15,11 +15,11 @@
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 In the past cosmology was a speculative science. The scarcity of observational
-data meant that many conflicting theories of the evolution of the universe were
+data meant that many conflicting theories for the evolution of the universe were
 entertained, with nothing but personal opinion to differentiate between them.
 The explosion in the quantity and quality of observational data in recent years
 has led to a much more competitive market-place for ideas about the physical
-beginning of everything.
+beginning of the universe.
 
 The Big Bang scenario has emerged as a cohesive framework for the evolution of
 the universe from very early times. The observation of the Cosmic
@@ -40,48 +40,50 @@ number of theoretical models which agree with current observational limits
 
 Ground and space-based observations have significantly challenged theoretical
 cosmological models with a wealth of new data. The Wilkinson Microwave
-Anisotropy Probe mission (WMAP) \cite{Komatsu:2008hk} in conjunction with supernova
-surveys and other evidence have shown that the fluctuations in
-temperature of the CMB are $10^{-5}$ times smaller than the background value
-and that the magnitudes of the fluctuations are roughly independent of the
+Anisotropy Probe (WMAP) mission \cite{Komatsu:2008hk}, in conjunction with supernova
+surveys and other evidence, have shown that the fluctuations in
+the temperature of the CMB are $10^{5}$ times smaller than the background value
+and that the magnitude of the fluctuations is roughly independent of the
 angular scales at which they are measured. This is in agreement with the
 predictions of inflationary models and has led to other scenarios being ruled
-out. An upper bound has also been placed
-on the amplitude of gravitational wave perturbations and bounds have been
+out. An upper bound has been placed
+on the amplitude of gravitational wave perturbations and bounds have also been
 placed on the deviation of the fluctuations from a purely random Gaussian
 distribution.
 
 Constraining the parameter space of inflationary models is an important step
 towards limiting the number of observationally viable models, and ultimately
-singling out one of these as the description of the physics of the early
+towards identifying one such model as the best candidate to descibe the
+physics of the early
 universe. 
 % In this work theoretical and numerical methods are used to constrain
 % particular classes of inflationary models.
 
-The goal of this work is to constrain inflationary models in two very different
-ways: by deriving theoretical limits on their parameter space, and demonstrating
+The goal of this thesis is to constrain inflationary models in two very different
+ways: by deriving theoretical limits on their parameter spaces, and by demonstrating
 a numerical calculation which will allow the investigation of higher order
 perturbations. Both these methods have the potential to limit the
-parameter space of the models investigated and possibly rule them out.
+parameter space of the models investigated and possibly to rule them out.
 
 
 In Chapter~\ref{ch:introduction} the foundations are laid for these investigations.
 The geometry and physics of the Friedmann-Robertson-Walker universe are presented and
 inflationary cosmology is introduced to alleviate problems with the standard Big
 Bang scenario. Slow roll conditions are then defined to ensure an adequate duration
-of inflation occurs. Despite its elegance, this homogeneous universe is, however,
-exceedingly dull. To understand the inhomogeneities present in reality, first order
+of inflation. Despite its elegance, this homogeneous cosmology does not provide an
+adequate description of our universe. To understand the inhomogeneities that
+are present in reality, first order
 cosmological perturbation theory is employed. Models with non-canonical
 actions can also be considered. The relationships between observable quantities and
-the model parameters are altered in this case meaning these models could be
+the model parameters are altered in this case, meaning these models could be
 distinguished from those with canonical actions. The departure of primordial
 perturbations from a Gaussian random distribution could also reveal significant
 information about the underlying physics at work.
 
 
-In Part~\ref{part:dbi} of this work theoretical bounds are placed on a class of
+In Part~\ref{part:dbi} of this thesis, theoretical bounds are placed on a class of
 non-canonical inflationary models. These models illustrate the dynamics of
-extended objects called branes in superstring theory and are considered some of
+extended objects called branes in superstring theory and are considered to be some of
 the most promising candidates for achieving inflation using string theory.
 
 Chapter~\ref{ch:dbi-intro} outlines the Dirac-Born-Infeld (DBI) scenario in
@@ -91,76 +93,81 @@ play an integral role in this scenario. These are compactified into a complex
 manifold whose geometry allows extended regions called throats to exist. DBI
 inflation consists of a brane moving in one of the throats. The inflaton field is
 the radial distance of the brane from the tip of the throat. Translating the
-higher-dimensional motion into four dimensions introduces a square-root into the
+higher-dimensional motion into four dimensions introduces a non-canonical term into
+the
 effective action. The real nature of the action then enforces an upper bound on the
-kinetic energy of the inflaton allowing a sufficiently long period of inflation. The
+kinetic energy of the inflaton, allowing a sufficiently long period of inflation. The
 total inflaton field variation is directly linked to the
-amplitude of tensor modes which can be produced, by a result due to Lyth
-\cite{lyth}.
+amplitude of tensor modes which can be produced.
 
 
 In Chapter~\ref{ch:dbi} the repercussions of this relationship between the change in
-the field and the tensor mode amplitude are explored further. In the DBI scenario,
-Baumann \& McAllister \cite{bmpaper} used the Lyth result to place a conservative
+the field value and the tensor mode amplitude are explored further. In the DBI
+scenario,
+Baumann \& McAllister \cite{bmpaper} placed a conservative
 upper bound on the total production of tensor modes during inflation, by assuming the
 brane does not move further than the length of the throat. By considering only the
 period of observable inflation, which takes place over a much smaller region of the
-throat, a new bound is derived which is considerably stronger. In the generic
-case the ratio of amplitudes of tensor and scalar perturbations must be less than
+throat, we have derived a new bound which is considerably stronger. In the
+generic
+case, the ratio of the amplitudes of the tensor and scalar perturbations must be less
+than
 $10^{-7}$. This is below  even the most optimistic forecasts for
 the sensitivity of future observational experiments. 
 
 If attention is limited to brane motion down the throat, another complementary bound
-on the tensor modes can be derived which depends on the non-Gaussianity produced
+on the tensor modes can be derived, which depends on the non-Gaussianity of the
+scalar modes produced
 during inflation. The DBI scenario is inherently non-Gaussian in nature but, even
-assuming the largest levels allowed by observations, the tensor-scalar ratio must be
-above $0.005$. These two theoretical bounds are clearly incompatible in the generic
+assuming the largest levels allowed by observations, the tensor-scalar ratio must
+exceed $0.005$. These two bounds are clearly incompatible in the generic
 case and only a very fine-tuned selection of model parameters allows the standard DBI
-scenario to survive. By taking a more phenomenological approach, keeping
-the square-root in the action while allowing the other parameters to vary,
+scenario to survive. By taking a more phenomenological approach and allowing the
+other parameters to vary,
 conditions are found under which the bounds can be relaxed.
 
 
-A more general class of models which evade the upper bound are found in
+A more general class of models which evade the upper bound are identified in
 Chapter~\ref{ch:multibrane}. The DBI scenario is characterised by a simple
-algebraic relation in which the sound speed of fluctuations is inversely
-propotional to a contribution to the non-gaussianity. By allowing the
-proportionality constant to vary, a new family of actions is described for which the
+algebraic relation, in which the sound speed of fluctuations is inversely
+proportional to the contribution to the non-Gaussianity. By allowing the
+proportionality constant to vary, a new family of actions is derived for which the
 bound on the tensor-scalar ratio can be relaxed. 
 
 Instead of considering a single brane moving in the throat, a more natural scenario
 might involve multiple branes. These could be created from the energy released by a
 brane/anti-brane annihilation and could move up the throat away from the tip.
-In \Rref{thomasward} Thomas \& Ward described the case when these branes are
+In \Rref{thomasward}, Thomas \& Ward described the case when these branes are
 coincident. When a large number of branes coincide the resultant action is similar
 to the single brane action and is restricted by the bounds on the tensor-scalar
-ratio. For a small finite number of branes, however, the action is non-Abelian in
-nature and is one of the family of bound-relaxing actions described above.
-Nevertheless this model is still constrained by observations and if a detectable
-tensor signal is required only two or three coincident branes
+ratio. For a small, finite number of branes, however, the action is non-Abelian in
+nature and is one of the family of ``bound-relaxing'' actions described above.
+Nevertheless, this model is still constrained by observations and, if a detectable
+tensor signal is required, only two or three coincident branes
 are allowed. This limit on the number of branes is strongly dependent on the
 non-Gaussianity and a tightening of the observational bounds could rule out the
-possibility of an obervable tensor signal from the model altogether.
+possibility of an observable tensor signal from this model.
 
 
-In Part~\ref{part:numerical} the focus moves from theoretical to numerical
+In Part~\ref{part:numerical}, the focus of the thesis moves from analytical to
+numerical
 techniques. Second order cosmological perturbations are numerically calculated for
 single field canonical inflationary models.
 
-In Chapter~\ref{ch:perts} the system of equations for the numerical calculation is
-developed. In order to understand non-linear perturbative effects it is necessary to
+In Chapter~\ref{ch:perts}, the system of equations for the numerical calculation is
+developed. In order to understand non-linear perturbative effects, it is necessary to
 examine models using perturbation theory beyond first order. The gauge
 transformation for second order perturbations is outlined and the effect on
-scalar quantities is considered for the uniform curvature gauge. In
+scalar quantities is considered in the uniform curvature gauge. In
 \Rref{Malik:2006ir} the Klein-Gordon equation for second order perturbations was
-written in terms of the field perturbations alone. This will form the basis of the
+written in terms of the field perturbations alone. This forms the basis of the
 numerical calculation once it is transformed into Fourier space. As the original
 equation involves terms quadratic in the first order perturbations, the Fourier
 transformed equation contains convolutions of these perturbations. As a first step
-towards demonstrating the calculation for the full equation the slow roll version of
+towards demonstrating the calculation for the full equation, the slow roll version of
 the source term is considered in the second order equation. The second order
 perturbations can be linked to observable quantities including the curvature
-perturbation and the non-gaussianity.
+perturbation and the non-Gaussianity parameter.
 
 
 
@@ -169,7 +176,8 @@ calculation described in Chapter~\ref{ch:numericalsystem}. They must first be
 rewritten in a form more suitable for numerical work. This involves changing the
 time coordinate to the number of elapsed e-foldings and writing the convolution
 terms in spherical polar coordinates. Four different single field slow roll
-potentials will be used and the parameters for these models are set by comparing
+potentials will be investigated. The parameters for these models are set by
+comparing
 the calculated power spectrum of first order scalar perturbations with the latest
 WMAP data. The initial conditions for the background field and perturbations must
 also be specified. The second order perturbations are intially set to zero, to
@@ -181,20 +189,21 @@ error of this test calculation.
 
 
 The results of the numerical calculation are presented in Chapter~\ref{ch:results}.
-Three different ranges of the discretised momentum are considered and general
-results presented for the $\msqphisq$ potential. 
+Three different ranges of the discretised momenta are considered and general
+results presented for the quadratic potential. 
 % Comment out results?
 As expected for a single field slow
 roll model, the second order perturbations are highly suppressed compared to the
-first order. 
+first order ones. 
 The source term of the second order perturbation equation is similar in form to the
-power spectrum of first order perturbations, decreasing rapidly until horizon
+power spectrum of first order perturbations. It descreases rapidly until
+horizon
 crossing after which a more steady amplitude is maintained.
 % 
 % 
 The results for all four potentials are also compared. Differences are apparent in
 the behaviour of the models after horizon crossing.
-This calculation represents only the first step towards a full numerical calculation
+This calculation represents only the first step towards a full numerical integration
 of the second order Klein-Gordon equation. The next stages towards this goal are
 outlined and the second order equation for single field models without the slow roll
 assumption is written in the correct form for numerical use.
@@ -214,7 +223,7 @@ assumption is written in the correct form for numerical use.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-Throughout this work units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}=
+Throughout this thesis units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}=
 2.4 \times 10^{18}\, {\rm GeV}$ defines the reduced Planck mass and $c=\hbar =1$. 
 
 An overdot ($\dot{~}$) is used for differentiation with respect to proper
