--- a/theend.tex
+++ b/theend.tex
@@ -1,15 +1,15 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.12 2009/11/12 23:43:06 ith Exp $
+% $Id: theend.tex,v 1.13 2009/11/16 16:59:10 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.12 2009/11/12 23:43:06 ith Exp $}
+{\version$Id: theend.tex,v 1.13 2009/11/16 16:59:10 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\chapter{Summary and Conclusions}
+\chapter{Conclusion and Discussion}
 \label{ch:conclusions}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
