Changed title of Part III

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.39 2009/11/04 16:23:02 ith Exp $
+% $Id: thesis.tex,v 1.40 2009/11/16 16:59:29 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %  twoside,
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.39 2009/11/04 16:23:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.40 2009/11/16 16:59:29 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -106,7 +106,7 @@ theend
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Conclusion and summary
-\part{End}
+\part{Conclusion}
 % \setcounter{part}{0}
 % \phantomsection
 % The part:\thepart
