--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.27 2009/11/17 12:49:14 ith Exp $
+% $Id: results.tex,v 1.28 2009/11/17 13:39:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.27 2009/11/17 12:49:14 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.28 2009/11/17 13:39:39 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -161,42 +161,46 @@ drives the production of second order perturbations as shown in
 \eqs{eq:KG2-fourier-sr-num} and
 \eqref{eq:KG2-fourier-sr-ntime}. Figure~\ref{fig:src-full} shows the
 absolute magnitude of the source term for a single $k$ mode, $\kwmap$,
-for all time steps calculated.
+for all time steps calculated. 
+The source term is large at early times, and closely follows the form
+of the spectrum of the first order perturbations, as can be seen from
+Figure~\ref{fig:Pphi-kwmap}.
 % 
-\begin{figure}
+\begin{figure}[tb]
 \centering
 \subfloat[Absolute magnitude of the source term.]{
- \includegraphics[width=0.43\textwidth]{numerical/graphs/src-kwmap-small}
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/src-kwmap-large}
 \label{fig:src-full}
-}\qquad
+}\\
 % 
 \subfloat[Power spectrum of scalar perturbations][Power spectrum of scalar
 perturbations $\mathcal{P}^2_{\delta\varphi} =
 \frac{k^3}{2\pi^2}|\delta\varphi|^2$.]{
-\includegraphics[width=0.43\textwidth]{numerical/graphs/Pphi-kwmap-nohoriz-small}
+\includegraphics[width=0.8\textwidth]{numerical/graphs/Pphi-kwmap-nohoriz-large}
 \label{fig:Pphi-kwmap}
 }
 \caption[The source term and power spectrum for $\kwmap$]{Source term and power
 spectrum for the WMAP pivot scale $\kwmap$.}
 \end{figure}
 % 
-Figure~\ref{fig:src-kwmap-3ranges} shows how the source term changes
-with the choice of $k$ range.  After horizon crossing the source terms
-are approximately equal. Before horizon crossing, however, there is a
+Figure~\ref{fig:src-kwmap-3ranges} shows how the source term depends on
+the choice of $k$ range.  After horizon crossing, the source term
+is independent of the specific choice of $K_i$ ($i=1,2,3$). Before horizon crossing,
+however, there is a
 strict hierarchy with the smaller $k$ ranges, $K_1$ and $K_2$, leading to
 smaller source
-contributions.  As stated in Section \ref{sec:tests-num}, $\Delta k$
-should be at least as large as $\kmin$ in order to reduce the error to
-a minimum.
+contributions.  As discussed in Section \ref{sec:tests-num}, $\Delta k$
+should be at least as large as $\kmin$ in order for the error to be reduced to
+a minimum. In Figure~\ref{fig:src-3ks} the source term is plotted at three different
+values of $k$ for the range $K_1$. As $k$ increases, or equivalently the length scale
+decreases, the magnitude of the source term after horizon crossing decreases. 
 % 
 \begin{figure}
 \centering
  \includegraphics[width=0.8\textwidth]{numerical/graphs/src-kwmap-3ranges-large}
 \caption[Comparison of source term for different ranges]{Comparison of the source
-term \eqref{eq:KG2-source-ntime} for $\kwmap$ over three different ranges with
-different $\Delta k$s as specified
-in
-\eq{eq:Kranges-res}.} 
+term \eqref{eq:KG2-source-ntime} for $\kwmap$ over the three different ranges $K_1$,
+$K_2$ and $K_3$, specified in \eq{eq:Kranges-res}.} 
 \label{fig:src-kwmap-3ranges}
 \end{figure}
 % 
@@ -205,41 +209,41 @@ in
  \includegraphics[width=0.8\textwidth]{numerical/graphs/src-3ks-large}
 \caption[Source term at three different $k$s]{The source term
 \eqref{eq:KG2-source-ntime} for three different $k$
-values including the WMAP
-pivot scale. As $k$
+values in the $K_1$ range, including the WMAP
+pivot scale, $\kwmap=5.25\e{-60}\Mpl$. As $k$
 gets larger (scale gets smaller) the source term becomes smaller.}
 \label{fig:src-3ks}
 \end{figure}
 % 
 % 
 
-
-
-The source term is large at early times, and closely follows the form
-of the spectrum of the first order perturbations as can be seen from
-Figure~\ref{fig:Pphi-kwmap}.
 %
 It is informative to compare the magnitude of the source term with the
 other terms in the second order evolution equation
-(\ref{eq:KG2-fourier-sr-ntime}). If we let $T$ denote the other terms,
+(\ref{eq:KG2-fourier-sr-ntime}). We denote these other terms by $T$:
 %
 \begin{equation}
 \label{eq:Tdefn}
  T(\kvi) = \left(3 + \frac{\dN{H}}{H}\right)
 \dN{\dvp2}(\kvi)+ \left(\frac{k}{aH}\right)^2\dvp2(\kvi)
 +\left(\frac{\Upp}{H^2}-{24 \pi G}(\dN{\vp_{0}})^2\right)
-\dvp2(\kvi) \,,
+\dvp2(\kvi) \,.
 \end{equation}
 %
-then Figure~\ref{fig:src-vs-others} shows the absolute magnitude of
-both $S$ and $T$.  It is clear that for this $k$ the source term is of comparable
-magnitude only early in the simulation.  Figure~\ref{fig:s-over-t-3ks}
-shows a comparison of $|S|/|T|$ for three different $k$ values. The larger the
-$k$ mode, the closer in amplitude $S$ is to the rest of the terms in the ODE.
-A priori it is not known where $S$ will be large for a particular chosen potential
-and mode but once determined it could be possible to significantly reduce the time
-required for the simulation by only calculating $S$ in the regions where it is
-important.
+Figure~\ref{fig:src-vs-others} then shows the absolute magnitude of
+both $S$ and $T$.  It is clear that for the scale $\kwmap$ the contributions to the
+source term are only of comparable
+magnitude during the early stages of the simulation.  
+% 
+Figure~\ref{fig:s-over-t-3ks}
+shows a comparison of $|S|/|T|$ for three different $k$ values. 
+The magnitude of $S$ is closer to that of the rest of the terms in the ODE for the
+larger $k$ mode.
+A priori, the range of $k$ modes where $S$ will be large for a particular chosen
+potential is not known. However, once the relevant values of $k$ have been
+determined, it may be possible to significantly reduce the time
+required for the simulation by restricting the calculation of $S$ to those regions
+where it is important.
 %
 \begin{figure}
 \centering
@@ -270,32 +274,33 @@ at early stages or is important throughout the evolution.}
 
 In Figure~\ref{fig:src-kinit} the value of $|S|$ at the start of the evolution
 of $\dvp2$ for each $k$ mode is shown. The magnitude of the source term is much
-smaller for larger $k$s (smaller scales). 
-Because the smaller $k$s begin their evolution earlier the relative difference
+smaller for larger values of $k$ (smaller scales). 
+Because the smaller $k$ modes begin their evolution earlier, the relative difference
 in $|S|$ is not as pronounced when measured at a single timestep (see for example
 Figure~\ref{fig:src-3ks}).
-It should also be remembered that the magnitude of other terms in the second
-order ODE is small for larger $k$s as shown by the ratio $|S|/|T|$ in
-Figure~\ref{fig:s-over-t-3ks} where $T$ is defined above in \eq{eq:Tdefn}.
+It should also be remembered that the magnitude of the other terms in the second
+order ODE is small for larger $k$ modes as shown by the ratio $|S|/|T|$ in
+Figure~\ref{fig:s-over-t-3ks}.
 % 
 \begin{figure}
 \centering
 \includegraphics[width=0.8\textwidth]{numerical/graphs/src_kinit_log}
  \caption[Source term at initial start times]{The absolute magnitude of the source 
-term at the initial start time for each $k$ when $k = aH \times 50$ deep inside the
+term at the initial start time for each $k$ when $k/aH = 50$ deep inside
+the
 horizon. The results are for the range $K_1=\left[ 1.9\e{-5},
 0.039 \right] \Mpc^{-1}= \left[0.5\e{-61}, 1.0245\e{-58}\right]\Mpl$.}
 \label{fig:src-kinit}
 \end{figure}
 % 
 
-The source term for all $k$s can also be compared for different timesteps. In
+The source term for all $k$ modes can also be compared for different timesteps. In
 Figure~\ref{fig:src-3ns} the upper blue line shows $|S(k)|$ around 69 e-foldings
 before the end of
 inflation when $\dvp1$ has been initialised for only the very smallest $k$
 modes. The middle green
-line shows $|S|$ when all $\dvp1$ modes have been started. Finally the lower red
-line plots $|S|$
+line shows $|S|$ when all $\dvp1$ modes have started to evolve. Finally, the lower
+red line illustrates $|S|$
 after all modes have exited the horizon, around 52 e-foldings before the end of
 inflation.
 % 
